--- a/BaiTapGiuaKi/app/src/main/res/values/strings.xml
+++ b/BaiTapGiuaKi/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BaiTapGiuaKi</string>
+    <string name="action_home">Home</string>
+    <string name="action_profile">Profile</string>
+    <string name="action_setting">Setting</string>
 </resources>
